--- a/style.css
+++ b/style.css
@@ -13,9 +13,14 @@
     align-items: center;
 }
 .profile-card-info-icon{
-    width: 30px;
-    height: 30px;
-    color: blue;
+    width: 50px;
+    height: 50px;
+    color: goldenrod;
+}
+.profile-card-info img{
+    width: 50px;
+    height: 50px;
+   
 }
 .desha-card{
     display: flex;
